# serverless-ecommerce

./: .editorconfig  .gitignore  .pylintrc  README.md
api/: Makefile  conftest.py  package-lock.json  package.json  pyproject.toml  serverless.yml
api/http/handlers/administration/: categories.py
api/http/responders/: base_response.py
api/http/validators/: base_validator.py  decorators.py  exceptions.py
api/http/validators/administration/: categories.py
api/models/: category.py  model.py
api/tests/unit/administration/: category_test.py
api/tests/unit/validation/administration/: category_validators_test.py
infrastructure/: acm.tf  cloudfront.tf  cloudwatch.tf  cognito.tf  http-gateway.tf  main.tf  route53.tf  s3.tf  ses.tf  variables.tf
services/ecommerce-api/: config.example.json  package-lock.json  package.json  poetry.toml  pyproject.toml  serverless.yml
services/ecommerce-api/ecommerce-api/: products.py
