[tool.poetry]
name = "serverless-ecommerce-api"
version = "0.1.0"
description = ""
authors = ["Alex Mills <alex@alexmills.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.18.38"
simplejson = "^3.17.5"
validators = "^0.18.2"
aws-lambda-powertools = "^1.20.2"

[tool.poetry.dev-dependencies]
pylint = "^2.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
