[tool.poetry]
name = "ecommerce-api"
version = "0.1.0"
description = ""
authors = ["Alex Mills <alex@alexmills.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
stripe = "^2.60.0"
aws-lambda-powertools = "^1.20.2"
boto3 = "^1.18.53"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
